# MLX-native-SCANPY

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mlx_native_scanpy/: __init__.py  _mlx.py  analysis.py  anndata.py  pp.py  tl.py
tests/: test_analysis.py
